--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 @import "tailwindcss";
 
 @theme {
-  --color-*: initial;
   --color-white: #fff;
   --color-primary: #182c33;
   --color-blue: #002146;
   --color-lightprimary: #d9e9fa;
   --color-secondary: #9ca3af;
   --color-firstgold: #e0c212;
+  --color-veryLightGray: #ECECEC;
+  --color-teal: #A2CDD4;
   --font-display: "Poppins", sans-serif;
 }
 
