--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,13 @@
   --color-lightprimary: #d9e9fa;
   --color-secondary: #9ca3af;
   --color-firstgold: #e0c212;
-  --color-veryLightGray: #ECECEC;
-  --color-teal: #A2CDD4;
+  --color-veryLightGray: #ececec;
+  --color-teal: #a2cdd4;
   --font-display: "Poppins", sans-serif;
 }
 
 #root {
   margin: 0 auto;
   min-height: 100vh;
+  width: 100%;
 }
